# weboter

./: .gitignore  =6.0.2  CLAUDE.md  README.md  pyproject.toml  run.py  weboter.yaml
.claude/: README.md
.claude/agents/: architecture-reviewer.md  core-boundary-guardian.md  mcp-contract-operator.md  panel-shell-steward.md  plugin-integration-maintainer.md  service-surface-owner.md  workflow-authoring-mentor.md
.claude/skills/core-contract-first/: SKILL.md
.claude/skills/mcp-surface-governance/: SKILL.md
.claude/skills/panel-modularization/: SKILL.md
.claude/skills/plugin-contract-governance/: SKILL.md
.claude/skills/project-guide/: SKILL.md
.claude/skills/service-interface-keeper/: SKILL.md
doc/: INDEX.md  development_plan.md  mcp.weboter.json  mcp.weboter.windows-pipx.json  mcp.weboter.windows-uvx.json  mcp.weboter.windows-wsl.json  service_usage.md  workflow.md
doc/design/: engine_architecture.md  mcp_architecture.md
doc/interfaces/: README.md  agent-collaboration.md  core.md  mcp.md  panel.md  plugin.md  service.md
plugins/captcha_ocr/: __init__.py
plugins/data/: __init__.py  actions.py
plugins/http/: __init__.py  actions.py
plugins/mqtt/: __init__.py  actions.py
tests/: test_builtin_controls.py  test_builtin_set_data_action.py  test_captcha_ocr_plugin.py  test_contract_catalog.py  test_managed_env.py  test_mqtt_plugin.py  test_service_control.py  test_session_debug.py  test_subflow_visibility.py  test_workflow_edit.py
weboter/: __main__.py  cli.py
weboter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
weboter/app/: client.py  config.py  env_store.py  http_utils.py  schemas.py  server.py  service.py  session.py  state.py  task_manager.py
weboter/app/panel/: __init__.py  auth.py
weboter/app/routers/: __init__.py  catalog.py  env.py  panel.py  service.py  sessions.py  tasks.py  workflows.py
weboter/builtin/: __init__.py  basic_action.py  basic_control.py  captcha_action.py
weboter/builtin/action/: basic_action.py
weboter/core/: bootstrap.py  plugin_loader.py  workflow_io.py
weboter/core/engine/: action_manager.py  control_manager.py  engine.py  excutor.py  io_pipe_impl.py  job.py  runtime.py  scheduler.py
weboter/mcp/: __init__.py  server.py
weboter/model/: data_context.py  model.py
weboter/public/: __init__.py
weboter/public/contracts/: __init__.py  action.py  control.py  interface.py  io_pipe.py  utils.py
weboter/public/model/: model.py  (+1 more)
weboter/role/: action.py  control.py  interface.py  io.py
weboter_captcha_plugin/: __init__.py  actions.py
workflows/: demo_empty.json  ningbo_oil_report.json
(+3 files in other folders)
