[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weboter"
version = "0.1.0"
description = "Config-driven browser workflow automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.57.0",
]

[project.optional-dependencies]
browser = [
  "playwright-stealth>=2.0.0",
]
captcha = [
  "numpy>=2.0.0",
  "opencv-python>=4.10.0",
]

[project.scripts]
weboter = "weboter.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["weboter*"]