[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weboter"
version = "0.1.53"
description = "Config-driven browser workflow automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
service = [
  "fastapi>=0.116.0",
  "python-multipart>=0.0.9",
  "playwright>=1.57.0",
  "uvicorn>=0.35.0",
]
mqtt = [
  "paho-mqtt>=1.6.1",
]
captcha_ocr = [
  "numpy>=2.0.0",
  "opencv-python>=4.10.0",
  "rapidocr-onnxruntime>=1.3.24",
]
browser = [
  "playwright-stealth>=2.0.0",
]
captcha = [
  "numpy>=2.0.0",
  "opencv-python>=4.10.0",
]

[project.scripts]
weboter = "weboter.cli:main"
weboter-mcp = "weboter.mcp.server:main"

[project.entry-points."weboter.plugins"]
captcha_ocr = "weboter_captcha_plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["weboter*"]

[tool.setuptools.package-data]
"weboter.app.panel" = ["static/*.html", "static/assets/*.css", "static/assets/*.js"]